#  
#  This file is part of the OpenLink Software Virtuoso Open-Source (VOS)
#  project.
#  
#  Copyright (C) 1998-2006 OpenLink Software
#  
#  This project is free software; you can redistribute it and/or modify it
#  under the terms of the GNU General Public License as published by the
#  Free Software Foundation; only version 2 of the License, dated June 1991.
#  
#  This program is distributed in the hope that it will be useful, but
#  WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
#  General Public License for more details.
#  
#  You should have received a copy of the GNU General Public License along
#  with this program; if not, write to the Free Software Foundation, Inc.,
#  51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
#  
#  


# ----------------------------------------------------------------------
#
#  Additional files to distribute
#
# ----------------------------------------------------------------------
EXTRA_DIST = \
	Makefile \
	Makefile.mono \
	ArrayOfLongPacked.cs \
	AssemblyInfo.cs \
	BlobHandle.cs \
	BufferType.cs \
	CLI.cs \
	ConnectionOptions.cs \
	ConnectionPool.cs \
	ConnectionStringParser.cs \
	DataType.cs \
	DateTimeMarshaler.cs \
	design/AssemblyInfo.cs \
	design/VirtuosoConnectionStringEditor.cs \
	design/VirtuosoDataAdapterDesigner.cs \
	design/VirtuosoDotNetDSNForm.cs \
	design/VirtuosoDotNetDSNForm.resx \
	design/VirtuosoGenerateDataSet.cs \
	Diagnostics.cs \
	DTC.cs \
	ExplicitString.cs \
	Future.cs \
	FutureList.cs \
	IConvertData.cs \
	ICreateErrors.cs \
	IInnerCommand.cs \
	IInnerConnection.cs \
	IMarshal.cs \
	InnerConnectionBase.cs \
	ISession.cs \
	IVirtuosoError.cs \
	ManagedCommand.cs \
	ManagedConnection.cs \
	ManagedErrors.cs \
	Marshaler.cs \
	MD5.cs \
	MemoryHandle.cs \
	OdbcCommand.cs \
	OdbcConnection.cs \
	OdbcErrors.cs \
	OpenLink.Data.VirtuosoClient.VirtuosoCommand.bmp \
	OpenLink.Data.VirtuosoClient.VirtuosoConnection.bmp \
	OpenLink.Data.VirtuosoClient.VirtuosoDataAdapter.bmp \
	ParameterData.cs \
	Platform.cs \
	RPC.cs \
	Service.cs \
	SqlXml.cs \
	StatementList.cs \
	TcpConnection.cs \
	TcpSession.cs \
	Unix.cs \
	VirtDbType.cs \
	VirtuosoClientFactory.cs \
	VirtuosoClient.snk \
	VirtuosoCodeAccessPermission.cs \
	VirtuosoCommandBuilder.cs \
	VirtuosoCommand.cs \
	VirtuosoConnection.cs \
	VirtuosoConnectionStringBuilder.cs \
	VirtuosoDataAdapter.cs \
	VirtuosoDataReader.cs \
	VirtuosoErrorCollection.cs \
	VirtuosoError.cs \
	VirtuosoException.cs \
	VirtuosoInfoMessage.cs \
	VirtuosoParameterCollection.cs \
	VirtuosoParameter.cs \
	VirtuosoPermissionAttribute.cs \
	VirtuosoPermission.cs \
	VirtuosoTransaction.cs \
	VirtuosoWarning.cs \
	Win32.cs
